# PingPongGame

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Game/: build.gradle
Game/src/main/: AndroidManifest.xml
Game/src/main/jni/: gamelib.cpp
Game/src/main/jni/AbstractClasses/: Render.h
Game/src/main/jni/Common/: Intersect.h  (+3 more)
game/: .gitignore  build.gradle  gradle.properties
game/src/debug/: google-services.json
game/src/main/: AndroidManifest.xml
game/src/main/cpp/: CMakeLists.txt
game/src/main/cpp/game/: gamelib.cpp
game/src/main/cpp/game/AbstractClasses/: Render.h
game/src/main/cpp/game/Common/: Intersect.h  LogGL.h  Methods.h  Structures.h
game/src/main/cpp/game/Graphic/: View.cpp  View.h
game/src/main/cpp/game/Graphic/Controls/: Button.cpp  Button.h  Label.cpp  Label.h
game/src/main/cpp/game/Graphic/Objects/: Object.cpp  Object.h
game/src/main/cpp/game/Graphic/Objects/Ball/: Ball.cpp  Ball.h
game/src/main/cpp/game/Graphic/Objects/Platform/: Enemy.cpp  Enemy.h  Platform.cpp  Platform.h
game/src/main/cpp/game/Main/: Game.cpp  Game.h  State.h
game/src/main/cpp/game/Particles/: Particles.cpp  Particles.h  Plume.cpp  Plume.h  Shape.cpp  Shape.h  Splash.cpp  Splash.h
game/src/main/cpp/game/Shaders/: MakeShaders.cpp  MakeShaders.h
game/src/main/cpp/game/Sound/: OSLSound.cpp  OSLSound.h
game/src/main/cpp/game/Textures/: TexturesManager.cpp  TexturesManager.h
gradle/wrapper/: gradle-wrapper.properties
html/: privacy_policy.html  terms_conditions.html  terms_conditions.md
terms_privacy/: privacy_policy.md
(+55 files in other folders)
